--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">HelloAndroid</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="topRated">Top Rated</string>
+    <string name="homeTitleSearch">Search Results</string>
+    <string name="popularTitle">Popular</string>
+    <string name="upcoming">Upcoming</string>
 </resources>
